objects/TASKRAY__trBoardFilter__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the available Project Filters.</description>
    <fields>
        <fullName>TASKRAY__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter for User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Board_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__filterType__c</fullName>
        <description>Possible values: (&apos;task&apos;, &apos;project&apos;)</description>
        <inlineHelpText>Possible values: (&apos;task&apos;, &apos;project&apos;)</inlineHelpText>
        <label>Filter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__logicConfig__c</fullName>
        <label>Logic Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnhancedFiltering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhanced Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFilterDescription__c</fullName>
        <label>Filter Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFilterScope__c</fullName>
        <description>Possible Task values: (&apos;allTasks&apos;, &apos;myTasks&apos;). Possible Project values: (&apos;allProjects&apos;, &apos;myProjects&apos;)</description>
        <externalId>true</externalId>
        <inlineHelpText>Possible Task values: (&apos;allTasks&apos;, &apos;myTasks&apos;). Possible Project values: (&apos;allProjects&apos;, &apos;myProjects&apos;)</inlineHelpText>
        <label>Filter Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUsedInBoardFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes filter from non-board filter applications within the app.</description>
        <label>Used in Board Filter</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Board Filter</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaskRay Board Filters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Board Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>